Revamped UI/UX for cropping workflow and fixed crop window

--- a/index.css
+++ b/index.css
@@ -60,13 +60,17 @@ body {
 
 #imageArea {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  margin: auto;
 }
-
+#imageWrapper {
+  width: 50%;
+  height: auto;
+}
 #outputImage {
-  width: 50%; /* Half of the #imageArea div */
-  height: auto; /* Adjust the height automatically */
+  width: 100%;
+  height: auto;
   aspect-ratio: 8.5 / 11; /* Maintain the aspect ratio */
   object-fit: contain; /* To maintain aspect ratio of the image */
 }
